--- a/index.html
+++ b/index.html
@@ -5,39 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aybldx - Personal Website</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            font-size: 48px;
+            margin-top: 100px;
+        }
+        p {
+            font-size: 20px;
+            margin-top: 20px;
+        }
+        #social {
+            margin-top: 40px;
+        }
+        #social a {
+            display: block;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Aybldx</h1>
-    </header>
+    <h1>Aybldx</h1>
+    <p>"In the midst of chaos, there is also opportunity"</p>
 
-    <main>
-        <section id="social">
-            <h2>Find me on social media:</h2>
-            <ul>
-                <li>
-                    <a href="https://twitter.com/aybldx" target="_blank">
-                        <img src="twitter.png" alt="Twitter Logo"> @aybldx (Twitter)
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com/aybldx" target="_blank">
-                        <img src="instagram.png" alt="Instagram Logo"> @aybldx (Instagram)
-                    </a>
-                </li>
-                <li>
-                    <a href="https://discord.gg/eSab5mKyc9" target="_blank">
-                        <img src="discord.png" alt="Discord Logo"> Discord Server
-                    </a>
-                </li>
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Contact me:</h2>
-            <p>Email: official@aybldx.com</p>
-        </section>
-    </main>
+    <section id="social">
+        <h2>Find me on social media:</h2>
+        <ul>
+            <li>
+                <a href="https://twitter.com/aybldx" target="_blank">
+                    <img src="twitter.png" alt="Twitter Logo"> @aybldx (Twitter)
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com/aybldx" target="_blank">
+                    <img src="instagram.png" alt="Instagram Logo"> @aybldx (Instagram)
+                </a>
+            </li>
+            <li>
+                <a href="https://discord.gg/eSab5mKyc9" target="_blank">
+                    <img src="discord.png" alt="Discord Logo"> Discord Server
+                </a>
+            </li>
+        </ul>
+    </section>
 
     <footer>
         <p>&copy; 2023 Aybldx. All rights reserved.</p>
