--- a/index.html
+++ b/index.html
@@ -5,38 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aybldx - Personal Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="custom.css"> 
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        h1 {
-            font-size: 48px;
-            margin-top: 100px;
-        }
-        p {
-            font-size: 20px;
-            margin-top: 20px;
-        }
-        #social {
-            margin-top: 40px;
-        }
-        #social a {
-            display: block;
-            margin-bottom: 10px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Aybldx</h1>
-    <p>"In the midst of chaos, there is also opportunity"</p>
+    <div class="container">
+        <h1>Aybldx</h1>
+        <p>"In the midst of chaos, there is also opportunity"</p>
 
-    
+        <div class="button-container">
+            <a href="https://discord.gg/eSab5mKyc9" target="_blank" class="discord-button">Join Discord Server</a>
+        </div>
 
-    <footer>
-        <p>&copy; 2023 Aybldx. All rights reserved.</p>
-    </footer>
+        <div class="contact">
+            <p>Contact me via email: <a href="mailto:official@aybldx.com">official@aybldx.com</a></p>
+        </div>
+    </div>
 </body>
 </html>
