--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aybldx - Personal Website</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aybldx | Personal Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Aybldx</h1>
-        <p>"In the midst of chaos, there is also opportunity"</p>
-
-        <div class="button-container">
-            <a href="https://discord.gg/eSab5mKyc9" target="_blank" class="discord-button">Join Discord Server</a>
-        </div>
-
-        <div class="contact">
-            <p>Contact me via email: <a href="mailto:official@aybldx.com">official@aybldx.com</a></p>
-        </div>
-    </div>
+  <header>
+    <h1 class="centered">Aybldx</h1>
+    <p class="quote">"In the midst of chaos, there is also opportunity"</p>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#socials">Socials</a></li>
+    </ul>
+  </nav>
+  <section id="socials">
+    <h2>Socials</h2>
+    <ul>
+      <li><a href="https://twitter.com/aybldx">Twitter</a></li>
+      <li><a href="https://instagram.com/aybldx">Instagram</a></li>
+      <li><a href="https://youtube.com/@aybldx">YouTube</a></li>
+      <li><a href="https://soundcloud.com/aybldx">SoundCloud</a></li>
+      <li><a href="https://discord.gg/eSab5mKyc9">Discord server</a></li>
+    </ul>
+  </section>
+  <footer>
+    <p>Email: <a href="mailto:official@aybldx.com">official@aybldx.com</a></p>
+  </footer>
 </body>
 </html>
