--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aybldx </title>
+  <title>Aybldx | Personal Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1 class="centered">Aybldx</h1>
     <p class="quote">"In the midst of chaos, there is also opportunity"</p>
-    <nav>
-      <ul>
-        <li><a href="#socials">Socials</a></li>
-      </ul>
-    </nav>
   </header>
-
+  
   <section id="socials">
     <h2>Socials</h2>
-    <ul>
-      <li><a href="https://twitter.com/aybldx">Twitter</a></li>
-      <li><a href="https://instagram.com/aybldx">Instagram</a></li>
-      <li><a href="https://youtube.com/@aybldx">YouTube</a></li>
-      <li><a href="https://soundcloud.com/aybldx">SoundCloud</a></li>
-      <li><a href="https://discord.gg/eSab5mKyc9">Discord server</a></li>
-    </ul>
+    <div class="button-container">
+      <a href="https://twitter.com/aybldx" class="social-button">Twitter</a>
+      <a href="https://instagram.com/aybldx" class="social-button">Instagram</a>
+      <a href="https://youtube.com/@aybldx" class="social-button">YouTube</a>
+      <a href="https://soundcloud.com/aybldx" class="social-button">SoundCloud</a>
+      <a href="https://discord.gg/eSab5mKyc9" class="social-button">Discord server</a>
+    </div>
   </section>
 
   <footer>
