--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aybldx </title>
+  <title>Aybldx | Personal Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <h1 class="centered">Aybldx</h1>
     <p class="quote">"In the midst of chaos, there is also opportunity"</p>
   </header>
-  
+
   <section id="socials">
     <h2>Socials</h2>
     <div class="button-container">
