--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aybldx | Personal Website</title>
+    <title>Aybldx </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,15 +11,23 @@
         <h1>Aybldx</h1>
         <p class="quote">"In the midst of chaos, there is also opportunity."</p>
         <a href="https://discord.gg/eSab5mKyc9" class="button">Join now</a>
-        <div class="page-in-page">
+        <button class="contact-button" onclick="toggleContact()">Contact Me</button>
+        <div class="contact-info" id="contactInfo">
             <h3>Socials:</h3>
-            <ul>
-                <li><a href="https://twitter.com/aybldx" target="_blank">Twitter</a></li>
-                <li><a href="https://instagram.com/aybldx" target="_blank">Instagram</a></li>
-                <li><a href="https://youtube.com/@aybldx" target="_blank">YouTube</a></li>
-            </ul>
+            <div class="social-buttons">
+                <a href="https://twitter.com/aybldx" class="social-button" target="_blank">Twitter</a>
+                <a href="https://instagram.com/aybldx" class="social-button" target="_blank">Instagram</a>
+                <a href="https://youtube.com/@aybldx" class="social-button" target="_blank">YouTube</a>
+            </div>
             <p>Email: official@aybldx.com</p>
         </div>
     </div>
+
+    <script>
+        function toggleContact() {
+            var contactInfo = document.getElementById("contactInfo");
+            contactInfo.style.display = (contactInfo.style.display === "block") ? "none" : "block";
+        }
+    </script>
 </body>
 </html>
