--- a/index.html
+++ b/index.html
@@ -8,26 +8,8 @@
 </head>
 <body>
     <div class="center">
-        <h1>Aybldx</h1>
+        <h1 class="name">Aybldx</h1>
         <p class="quote">"In the midst of chaos, there is also opportunity."</p>
-        <a href="https://discord.gg/eSab5mKyc9" class="button">Join now</a>
-        <button class="contact-button" onclick="toggleContact()">Contact Me</button>
-        <div class="contact-info" id="contactInfo">
-            <h3>Socials:</h3>
-            <div class="social-buttons">
-                <a href="https://twitter.com/aybldx" class="social-button" target="_blank">Twitter</a>
-                <a href="https://instagram.com/aybldx" class="social-button" target="_blank">Instagram</a>
-                <a href="https://youtube.com/@aybldx" class="social-button" target="_blank">YouTube</a>
-            </div>
-            <p>Email: official@aybldx.com</p>
-        </div>
     </div>
-
-    <script>
-        function toggleContact() {
-            var contactInfo = document.getElementById("contactInfo");
-            contactInfo.style.display = (contactInfo.style.display === "block") ? "none" : "block";
-        }
-    </script>
 </body>
 </html>
