--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aybldx </title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aybldx |</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="center">
-        <h1 class="name">Aybldx</h1>
-        <p class="quote">"In the midst of chaos, there is also opportunity."</p>
+  <div class="header">
+    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+    <img class="logo" src="aybldx_logo.png" alt="Aybldx Logo">
+    <div class="call-to-action">
+      <h1>SIDE HUSTLE TRIBE</h1>
+      <p>Let's hustle together, achieve our goals, and celebrate success as a strong and united Tribe! 🚀</p>
+      <a class="join-button" href="https://discord.gg/eSab5mKyc9">Join Now</a>
     </div>
+  </div>
+  <div class="hamburger-menu" id="hamburgerMenu">
+    <ul>
+      <li><a href="https://twitter.com/aybldx" target="_blank">Twitter</a></li>
+      <li><a href="https://instagram.com/aybldx" target="_blank">Instagram</a></li>
+      <li><a href="https://youtube.com/@aybldx" target="_blank">YouTube</a></li>
+    </ul>
+    <div class="email">
+      <p>Email: official@aybldx.com</p>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
