--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aybldx |</title>
+  <title>Aybldx | Personal Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="header">
     <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-    <img class="logo" src="aybldx_logo.png" alt="Aybldx Logo">
+    <div class="name">Aybldx</div>
     <div class="call-to-action">
       <h1>SIDE HUSTLE TRIBE</h1>
       <p>Let's hustle together, achieve our goals, and celebrate success as a strong and united Tribe! 🚀</p>
