--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
   <div class="header">
-    <div class="name">Aybldx</div>
-    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+    <h1 class="name">Aybldx</h1>
     <div class="call-to-action">
-      <h1>SIDE HUSTLE TRIBE</h1>
+      <h2>SIDE HUSTLE TRIBE</h2>
       <p>Let's hustle together, achieve our goals, and celebrate success as a strong and united Tribe! 🚀</p>
       <a class="join-button" href="https://discord.gg/eSab5mKyc9">Join Now</a>
     </div>
   </div>
-  <div class="hamburger-menu" id="hamburgerMenu">
+  <div class="links">
     <ul>
       <li><a href="https://twitter.com/aybldx" target="_blank">Twitter</a></li>
       <li><a href="https://instagram.com/aybldx" target="_blank">Instagram</a></li>
@@ -26,6 +25,5 @@
       <p>Email: official@aybldx.com</p>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
