--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aybldx | Personal Website</title>
+  <title>Aybldx | SHT</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,14 +16,12 @@
     </div>
   </div>
   <div class="links">
-    <ul>
-      <li><a href="https://twitter.com/aybldx" target="_blank">Twitter</a></li>
-      <li><a href="https://instagram.com/aybldx" target="_blank">Instagram</a></li>
-      <li><a href="https://youtube.com/@aybldx" target="_blank">YouTube</a></li>
-    </ul>
-    <div class="email">
-      <p>Email: official@aybldx.com</p>
-    </div>
+    <a class="social-button" href="https://twitter.com/aybldx" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com/aybldx" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com/@aybldx" target="_blank">YouTube</a>
+  </div>
+  <div class="footer">
+    <p>&copy; Aybldx 2023. All rights reserved.</p>
   </div>
 </body>
 </html>
