--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="header">
-    <h1 class="name">Aybldx</h1>
     <div class="call-to-action">
+      <h1>AYBLDX</h1>
       <h2>SIDE HUSTLE TRIBE</h2>
       <p>Let's hustle together, achieve our goals, and celebrate success as a strong and united Tribe! 🚀</p>
       <a class="join-button" href="https://discord.gg/eSab5mKyc9">Join Now</a>
