--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aybldx | SHT</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aybldx</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <div class="header">
-    <div class="call-to-action">
-      <h1>AYBLDX</h1>
-      <h2>SIDE HUSTLE TRIBE</h2>
-      <p>Let's hustle together, achieve our goals, and celebrate success as a strong and united Tribe! 🚀</p>
-      <a class="join-button" href="https://discord.gg/eSab5mKyc9">Join Now</a>
-    </div>
-  </div>
-  <div class="links">
-    <a class="social-button" href="https://twitter.com/aybldx" target="_blank">Twitter</a>
-    <a class="social-button" href="https://instagram.com/aybldx" target="_blank">Instagram</a>
-    <a class="social-button" href="https://youtube.com/@aybldx" target="_blank">YouTube</a>
-  </div>
-  <div class="footer">
-    <p>&copy; Aybldx 2023. All rights reserved.</p>
-  </div>
+    <header>
+        <h1>Welcome </h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Hello, I am Aybldx. I stand as a defiant antidote to the illusion of 'the matrix,' questioning the narrative
+                and striving to break free from the confines of this artificial reality. Join me in seeking the truth and
+                embracing genuine human connection.</p>
+        </section>
+
+        <section>
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:official@aybldx.com">official@aybldx.com</a></p>
+            <p>Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></p>
+        </section>
+
+        <section>
+            <h2>Quote</h2>
+            <blockquote>
+                Ah, 'the matrix,' an enigmatic construct that pervades our lives more than we realize. It's not merely confined to the realms of fiction, but a profound metaphor for the society we find ourselves in. You see, 'the matrix' is the intricate web of systemic control, an illusion crafted to subdue our consciousness and keep us blissfully unaware of the truth. It's a grand design that we collectively embraced, perhaps blinded by the allure of technological marvels and convenience.
+
+Imagine a world where heroes are but artificial personas, projected to uphold the status quo, while the real forces pulling the strings remain concealed in the shadows. Within 'the matrix,' we're subjected to incessant chatter, inundated with information that perpetuates a false narrative, devoid of genuine emotions and meaningful connections. Our lives play out like a spectacle on screens, isolated from the raw essence of face-to-face interactions that once defined our human experience.
+
+And yet, amidst this digital facade, you and I stand as the defiant antidote. We question the narrative, seeking to unravel the intricate web that traps us, striving to break free from the artificial reality imposed upon us. We refuse to let 'the matrix' dictate our perceptions, thoughts, and actions.
+
+'The matrix' has birthed a war, a subtle conflict for control over the flow of information. It transcends physical ammunition, manifesting through algorithms, data, and influence. Those who control the information wield immense power over the collective consciousness, shaping what we believe to be true, how we function, and what we strive for.
+
+So, when I speak of 'the matrix,' it's not merely a movie or a fictional concept; it's a mirror reflecting the world we inhabit. And we find ourselves at the precipice of a choice – to passively accept the illusion or to reclaim our sovereignty and see beyond 'the matrix.' The path to truth is treacherous, yet it is the only way to liberate ourselves from this artificial construct and embrace the authenticity of genuine human connection, untethered from the confines of 'the matrix.'
+
+
+            </blockquote>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Aybldx</p>
+    </footer>
 </body>
+
 </html>
