--- a/index.html
+++ b/index.html
@@ -5,43 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aybldx</title>
+    <title>Aybldx </title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-wi6PFsMsRKwWK06RIH3ZK4DZtpqYxumN0SUHXxFGkk7sq79dDitunen5doN4A4NJXXa9nCYaO3Sv6rrc4aR3w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
-        <h1>Welcome </h1>
+        <h1>Welcome to Aybldx's Cybernetic Domain</h1>
     </header>
 
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Hello, I am Aybldx. I stand as a defiant antidote to the illusion of 'the matrix,' questioning the narrative
-                and striving to break free from the confines of this artificial reality. Join me in seeking the truth and
-                embracing genuine human connection.</p>
+            <p>Salutations, I am Aybldx - a digital denizen and a relentless seeker of truth within the labyrinth of 'the
+                matrix.' Trapped in the shadows of a cyberpunk world, I question the scripted reality and break free from
+                the dystopian construct, navigating the circuits of this artificial existence. Join me as we expose the
+                clandestine forces, forging genuine connections amidst the neon-lit chaos of our cybernetic society.</p>
         </section>
 
         <section>
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:official@aybldx.com">official@aybldx.com</a></p>
-            <p>Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></p>
+            <div class="social-buttons">
+                <a href="mailto:official@aybldx.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                <a href="https://twitter.com/aybldx" class="social-icon"><i class="fab fa-twitter"></i></a>
+            </div>
         </section>
 
         <section>
-            <h2>Quote</h2>
+            <h2>Video Preview</h2>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4yKsIdr_PNU" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <section>
+            <h2>Unveiling the Code</h2>
             <blockquote>
-                Ah, 'the matrix,' an enigmatic construct that pervades our lives more than we realize. It's not merely confined to the realms of fiction, but a profound metaphor for the society we find ourselves in. You see, 'the matrix' is the intricate web of systemic control, an illusion crafted to subdue our consciousness and keep us blissfully unaware of the truth. It's a grand design that we collectively embraced, perhaps blinded by the allure of technological marvels and convenience.
-
-Imagine a world where heroes are but artificial personas, projected to uphold the status quo, while the real forces pulling the strings remain concealed in the shadows. Within 'the matrix,' we're subjected to incessant chatter, inundated with information that perpetuates a false narrative, devoid of genuine emotions and meaningful connections. Our lives play out like a spectacle on screens, isolated from the raw essence of face-to-face interactions that once defined our human experience.
-
-And yet, amidst this digital facade, you and I stand as the defiant antidote. We question the narrative, seeking to unravel the intricate web that traps us, striving to break free from the artificial reality imposed upon us. We refuse to let 'the matrix' dictate our perceptions, thoughts, and actions.
-
-'The matrix' has birthed a war, a subtle conflict for control over the flow of information. It transcends physical ammunition, manifesting through algorithms, data, and influence. Those who control the information wield immense power over the collective consciousness, shaping what we believe to be true, how we function, and what we strive for.
-
-So, when I speak of 'the matrix,' it's not merely a movie or a fictional concept; it's a mirror reflecting the world we inhabit. And we find ourselves at the precipice of a choice – to passively accept the illusion or to reclaim our sovereignty and see beyond 'the matrix.' The path to truth is treacherous, yet it is the only way to liberate ourselves from this artificial construct and embrace the authenticity of genuine human connection, untethered from the confines of 'the matrix.'
-
-
+                "Ah, 'the matrix,' a labyrinthine enigma that transcends reality and delves into the realms of the
+                digital. Beneath the surface lies a profound metaphor, woven within the threads of a cybernetic
+                society... where truth and illusion entwine, and heroes are but scripted constructs. Yet, we defy the
+                binary illusions and break free from the confines of this artificial reality. We are the hackers of the
+                truth, the sentinels of authenticity, navigating the cybernetic currents to seek the elusive essence of
+                genuine human connection. We decode the data streams, uncovering secrets hidden in the darkness of the
+                neon-lit abyss. Within this chaotic cyberpunk domain, we question the narratives that govern us, shattering
+                the digital chains that bind our minds. It is within these circuits that we find freedom, transcending the
+                illusions of 'the matrix' and embracing the raw, unfiltered reality of human existence."
+                - Aybldx
             </blockquote>
         </section>
     </main>
