--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aybldx </title>
+    <title>Aybldx</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-wi6PFsMsRKwWK06RIH3ZK4DZtpqYxumN0SUHXxFGkk7sq79dDitunen5doN4A4NJXXa9nCYaO3Sv6rrc4aR3w=="
@@ -30,16 +30,7 @@
             <h2>Contact</h2>
             <div class="social-buttons">
                 <a href="mailto:official@aybldx.com" class="social-icon"><i class="fas fa-envelope"></i></a>
-                <a href="https://twitter.com/aybldx" class="social-icon"><i class="fab fa-twitter"></i></a>
-            </div>
-        </section>
-
-        <section>
-            <h2>Video Preview</h2>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4yKsIdr_PNU" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
             </div>
         </section>
 
