--- a/index.html
+++ b/index.html
@@ -1,67 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aybldx</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-wi6PFsMsRKwWK06RIH3ZK4DZtpqYxumN0SUHXxFGkk7sq79dDitunen5doN4A4NJXXa9nCYaO3Sv6rrc4aR3w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #111;
+            color: #fff;
+        }
+        h1 {
+            font-size: 36px;
+        }
+        .contact {
+            margin-top: 20px;
+        }
+        .twitter {
+            color: #1DA1F2;
+        }
+        .email {
+            color: #FF7F50;
+        }
+    </style>
 </head>
-
 <body>
-    <header>
-        <h1>Welcome to Aybldx's Cybernetic Domain</h1>
-    </header>
-
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Salutations, I am Aybldx - a digital denizen and a relentless seeker of truth within the labyrinth of 'the
-                matrix.' Trapped in the shadows of a cyberpunk world, I question the scripted reality and break free from
-                the dystopian construct, navigating the circuits of this artificial existence. Join me as we expose the
-                clandestine forces, forging genuine connections amidst the neon-lit chaos of our cybernetic society.</p>
-        </section>
-
-        <section>
-            <h2>Contact</h2>
-            <div class="social-buttons">
-                <a href="mailto:official@aybldx.com" class="social-icon"><i class="fas fa-envelope"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            </div>
-        </section>
-
-        <section>
-            <h2>Unveiling the Code</h2>
-            <blockquote>
-                "Ah, 'the matrix,' a labyrinthine enigma that transcends reality and delves into the realms of the
-                digital. Beneath the surface lies a profound metaphor, woven within the threads of a cybernetic
-                society... where truth and illusion entwine, and heroes are but scripted constructs. Yet, we defy the
-                binary illusions and break free from the confines of this artificial reality. We are the hackers of the
-                truth, the sentinels of authenticity, navigating the cybernetic currents to seek the elusive essence of
-                genuine human connection. We decode the data streams, uncovering secrets hidden in the darkness of the
-                neon-lit abyss. Within this chaotic cyberpunk domain, we question the narratives that govern us, shattering
-                the digital chains that bind our minds. It is within these circuits that we find freedom, transcending the
-                illusions of 'the matrix' and embracing the raw, unfiltered reality of human existence."
-                - Aybldx
-            </blockquote>
-        </section>
-
-        <section>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4yKsIdr_PNU" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Aybldx</p>
-    </footer>
+    <h1>Hello, I am Aybldx</h1>
+    <div class="contact">
+        <a href="https://twitter.com/aybldx" class="twitter">Twitter</a> | <a href="mailto:official@aybldx.com" class="email">Email</a>
+    </div>
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PFj6-x1rYao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
-
 </html>
