--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <h1>Hi and welcome</h1>
+    <h1>Welcome!</h1>
     <p>Step into my world of creativity, beauty, and art.</p>
     <p>For business inquiries, please contact me at: <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a></p>
     <p>Connect with me on Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></p>
