--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <p>Follow me for exclusive content, updates, and more!</p>
 
     <!-- Add the OnlyFans icon here -->
-    <img src="onlyfans-icon.png" alt="OnlyFans Icon" width="1028">
+    <img src="onlyfans-logo-15227 (1).png" alt="OnlyFans Icon" width="1792">
 
     <div class="cta-section">
         <h2 class="cta-heading">Join Our Team of OnlyFans Models!</h2>
