--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         }
         
         h1 {
-            font-size: 36px;
+            font-size: 40px;
             color: #333;
             margin-bottom: 10px;
-            text-align: center; /* Added for centering */
+            text-align: center; 
             opacity: 0; /* Initially hidden */
             animation: fadeIn 1s ease-in-out forwards; /* Fade-in animation */
         }
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Welcome</h1>
     <p>Step into my world of creativity, beauty, and art.</p>
     <p>For business inquiries, please contact me at: <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a></p>
     <p>Connect with me on Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></p>
