--- a/index.html
+++ b/index.html
@@ -1,66 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Aybldx OF Agency</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        
-        .fancy-heading {
-            font-family: "Lucida Handwriting", cursive;
-            font-size: 60px;
-            color: #ff5a5f;
-            margin-bottom: 20px;
-            text-align: center;
-            opacity: 0; /* Initially hidden */
-            animation: fadeIn 1s ease-in-out forwards; /* Fade-in animation */
-        }
-
-        h1 {
-            font-size: 40px;
-            color: #333;
-            margin-bottom: 10px;
-            text-align: center; 
-            opacity: 0; /* Initially hidden */
-            animation: fadeIn 1s ease-in-out forwards; /* Fade-in animation */
-        }
-
-        /* Rest of the CSS remains the same */
-
-        /* Keyframes for fade-in animation */
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>OnlyFans Agency</title>
 </head>
 <body>
-    <h1 class="fancy-heading">Discover a World of Creativity</h1>
-    <p>Step into my world of creativity, beauty, and art.</p>
-    <p>For business inquiries, please contact me at: <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a></p>
-    <p>Connect with me on Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></p>
-    <p>Follow me for exclusive content, updates, and more!</p>
-
-
-    <div class="cta-section">
-        <h2 class="cta-heading">Join Our Team of OnlyFans Models!</h2>
-        <p class="cta-text">Are you a model looking to elevate your career on OnlyFans?</p>
-        <a class="cta-button" href="mailto:onlyfans@aybldx.com">Sign up now</a>
-    </div>
+    <header>
+        <div class="header-animation"></div>
+        <h1>Welcome to my OnlyFans Agency</h1>
+        <p>Managed by Aybldx</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="mailto:onlyfans@aybldx.com" class="join-button">Join</a></li>
+        </ul>
+    </nav>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a dedicated agency helping models succeed on OnlyFans and maximize their earnings.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feel free to reach out:</p>
+        <ul>
+            <li>Email: <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a></li>
+            <li>Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2023 OnlyFans Agency</p>
+    </footer>
 </body>
 </html>
