--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OnlyFans Agency</title>
 </head>
 <body>
+    <div class="particles"></div>
     <header>
         <div class="header-animation"></div>
         <h1>Welcome to my OnlyFans Agency</h1>
