--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="mailto:onlyfans@aybldx.com" class="join-button">Join</a></li>
+            <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
     <section id="about">
@@ -31,6 +31,28 @@
             <li>Email: <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a></li>
             <li>Twitter: <a href="https://twitter.com/aybldx">@aybldx</a></li>
         </ul>
+    </section>
+    <section id="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-container">
+            <div class="faq">
+                <h3>How can I join your agency?</h3>
+                <p>To join our agency, simply email us at <a href="mailto:onlyfans@aybldx.com">onlyfans@aybldx.com</a> with your details and portfolio.</p>
+            </div>
+            <div class="faq">
+                <h3>Do you provide support for managing accounts?</h3>
+                <p>Yes, we offer dedicated support to help models succeed on OnlyFans.</p>
+            </div>
+            <div class="faq">
+                <h3>What are the benefits of joining your agency?</h3>
+                <p>We provide personalized guidance, promotion, and a strong community of fellow models.</p>
+            </div>
+            <div class="faq">
+                <h3>How are payments processed?</h3>
+                <p>We handle payments securely and ensure timely payouts through various payment methods.</p>
+            </div>
+            <!-- Add more FAQ items as needed -->
+        </div>
     </section>
     <footer>
         <p>&copy; 2023 OnlyFans Agency</p>
