--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="particles"></div>
     <header>
-        <div class="header-animation"></div>
-        <h1>Welcome to my OnlyFans Agency</h1>
-        <p>Managed by Aybldx</p>
-    </header>
+    <div class="header-animation"></div>
+    <h1>Welcome to my OnlyFans Agency</h1>
+    <p>Managed by Aybldx</p>
+    <a href="mailto:onlyfans@aybldx.com" class="cta-button">Join Here</a>
+</header>
+
     <nav>
         <ul>
             <li><a href="#about">About Us</a></li>
