--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>OnlyFans Agency</title>
+    <title>OF Agency</title>
 </head>
 <body>
     <div class="particles"></div>
     <header>
     <div class="header-animation"></div>
-    <h1>Welcome to my OnlyFans Agency</h1>
+    <h1>Welcome to my OF Agency</h1>
     <p>Managed by Aybldx</p>
     <a href="mailto:onlyfans@aybldx.com" class="cta-button">Join Here</a>
 </header>
