--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
     <nav>
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#faq">FAQ</a></li>
+            <li><a href="model-tips.html">Model Tips</a></li>
         </ul>
     </nav>
     <section id="about">
