--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="particles"></div>
     <header>
     <div class="header-animation"></div>
-    <h1>Welcome to my OF Agency</h1>
+    <h1>Welcome</h1>
     <p>Managed by Aybldx</p>
     <a href="mailto:onlyfans@aybldx.com" class="cta-button">Join Here</a>
 </header>
@@ -59,7 +59,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 OnlyFans Agency</p>
+        <p>&copy; 2023 Aybldx</p>
     </footer>
 </body>
 </html>
