--- a/model-tips.html
+++ b/model-tips.html
@@ -51,7 +51,7 @@
     </article>
 
     <footer>
-        <p>&copy; 2023 OnlyFans Agency</p>
+        <p>&copy; 2023 Aybldx</p>
     </footer>
 </body>
 </html>
